# AutoTalentPipeline

./: .env.example  .gitignore  AGENTS.md  PRD-乐享AI实习生招聘自动化平台.md  README.md  ecosystem.config.cjs  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
app/: config.py  flow_interview.py  flow_resume.py  lark_client.py  llm_client.py  models.py  outlook_client.py  prompts.py  resume_parser.py  scheduler.py  scrubber.py  webhook_server.py
docs/: base_setup.md  recruiting-platform-test-engineer-agent.md
docs/releases/: 2026-05-29-generic-recruiting-preview.md  2026-05-29-generic-recruiting-v2.md
docs/superpowers/plans/: 2026-05-07-intern-recruitment-mvp.md
docs/superpowers/specs/: 2026-05-07-intern-recruitment-automation-design.md
prompts/: interview_summary.txt  resume_screening.txt
public/previews/: generic-recruiting-platform-preview.html
scripts/: deploy-server.sh  publish.sh  self-test.js  sync-off.sh  sync-on.sh  sync-status.sh  watch-deploy.sh
server/: config.js  graphService.js  index.js  interviewArtifacts.js  interviewSheetService.js  larkBaseService.js  notificationService.js  outlookDesktopService.js  resumeParser.js  sampleData.js  screening.js  store.js  templates.js
src/: App.jsx  styles.css
tests/: conftest.py  test_config.py  test_flow_interview.py  test_flow_resume.py  test_lark_client.py  test_llm_client.py  test_models.py  test_outlook_client.py  test_prompts.py  test_resume_parser.py  test_scrubber.py  test_webhook_server.py
tests/fixtures/: make_fixture.py
